1.9.7b dark theme fix for sidebar tab skips suggestions, arrow selects remove body scroll from toolbar in chrome (-webkit-scrollbars) keyboard nav scrolls tiles into view

--- a/src/dark.css
+++ b/src/dark.css
@@ -40,6 +40,6 @@ BODY {
 .tile:hover {
 	background-color:var(--hover);
 }
-#optionsButton {
+#optionsButton, #closeButton {
 	filter:invert(1) brightness(50%);
 }
